--- a/src/universidadgrupo/Vistas/FormularioMateria.form
+++ b/src/universidadgrupo/Vistas/FormularioMateria.form
@@ -75,7 +75,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLMateria" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="16" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="jLEstado" min="-2" max="-2" attributes="0"/>
